<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_game">GameActivity</string>
    <string name="not_log_in">not_log_in</string>
    <string name="game">game</string>
    <string name="not_revoke">not_revoke</string>
    <string name="not_close_session">not_close_session</string>
    <string name="welcome">Welcome </string>
    <string name="title_activity_classification">ClassificationActivity</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="points">Score</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="send_seed">send seed</string>
    <string name="log_out">log out</string>
    <string name="credits">Credits</string>
    <string name="clasification">Clasification</string>
    <string name="new_game">New Game</string>
    <string name="not_firebase_auth">not_firebase_auth</string>
    <string name="friends">friends</string>
    <string name="title_activity_configuration">ConfigurationActivity</string>
    <string name="configuration">Personal information</string>
    <string name="savechanges">Save changes</string>
    <string name="config_name">Name: </string>



    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="wins">Total victories:</string>
    <string name="defeats">Total defeats:</string>
    <string name="killed">Enemies killed:</string>
    <string name="min_rank">Min rank:</string>
    <string name="max_rank">Max rank:</string>
    <string name="min_score">Min score:</string>
    <string name="max_score">Max score</string>


</resources>
